--- a/RazorLib/Shared/settings/TelegramUsersListComponent.razor
+++ b/RazorLib/Shared/settings/TelegramUsersListComponent.razor
@@ -11,36 +11,46 @@
         <h5 class="card-title">Пользователи</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Права доступа</h6>
         <MudTable Loading="IsBusyProgress" ServerData="@(new Func<TableState, Task<TableData<UserModelDB>>>(ServerReload))" Dense="true" Hover="true"
-                  OnCommitEditClick="SaveElement"
-                  RowEditPreview="BeckupEditItem" RowEditCancel="ResetItemToOriginalValues" @ref="table">
+                  OnCommitEditClick="SaveElement" CanCancelEdit="true" RowEditPreview="BeckupEditItem" RowEditCancel="ResetItemToOriginalValues" @ref="table">
             <ToolBarContent>
                 <MudText Typo="Typo.h6">Telegram users</MudText>
                 <MudSpacer />
-                <MudFab Title="Обновить список пользователей" OnClick="Reload" Color="Color.Primary" StartIcon="@(Icons.Material.Filled.Refresh)" Size="Size.Small" />
+                @if (IsBusyProgress)
+                {
+                    <MudProgressCircular Class="me-4" Color="Color.Primary" Size="Size.Small" Indeterminate="true" />
+                }
+                else
+                {
+                    <MudFab Title="Обновить список пользователей" OnClick="Reload" Color="Color.Primary" StartIcon="@(Icons.Material.Filled.Refresh)" Size="Size.Small" />
+                }
             </ToolBarContent>
             <HeaderContent>
                 <MudTh>Пользователь</MudTh>
+                <MudTh>Email</MudTh>
                 <MudTh>Права</MudTh>
             </HeaderContent>
             <RowTemplate>
-                <MudTd>@($"{context.Name} {context.FirstName} {context.LastName}")</MudTd>
-                    <MudTd>права</MudTd>
-                </RowTemplate>
-                <RowEditingTemplate>
-                    <MudTd>
-                        <span>@($"{context.Name} {context.FirstName} {context.LastName}")</span>
+                <MudTd>
+                    @($"{(string.IsNullOrWhiteSpace(context.Name) ? "" : $"@{context.Name} - ")}{context.FirstName} {context.LastName}")
+                </MudTd>
+                <MudTd>@context.Email</MudTd>
+                <MudTd>права</MudTd>
+            </RowTemplate>
+            <RowEditingTemplate>
+                <MudTd>
+                    <span>@($"{(string.IsNullOrWhiteSpace(context.Name) ? "" : $"@{context.Name} - ")}{context.FirstName} {context.LastName}")</span>
                 </MudTd>
                 <MudTd>
-                    <MudTextField @bind-Value="@context.Email" Required />
+                    <MudTextField InputType="InputType.Email" @bind-Value="@context.Email" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.CommandsAllowed ? "Команды (выключить?)" : "Команды (отключить?)")" @bind-Checked="@context.CommandsAllowed" />
+                    <MudCheckBox Label="@(context.CommandsAllowed ? "Команды (запретить?)" : "Команды (разрешить?)")" @bind-Checked="@context.CommandsAllowed" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.AlarmSubscriber ? "Уведомления (отключить?)" : "Уведомления (включить?)")" @bind-Checked="@context.AlarmSubscriber" />
+                    <MudCheckBox Label="@(context.AlarmSubscriber ? "Уведомления (запретить?)" : "Уведомления (разрешить?)")" @bind-Checked="@context.AlarmSubscriber" />
                 </MudTd>
                 <MudTd>
-                    <MudCheckBox Label="@(context.IsDisabled ? "Отключен (включить?)" : "Включен (отключить?)")" @bind-Checked="@context.IsDisabled" />
+                    <MudCheckBox Label="@(context.IsDisabled ? "Заблокирован (разблокировать?)" : "Активный (заблокировать?)")" @bind-Checked="@context.IsDisabled" />
                 </MudTd>
             </RowEditingTemplate>
             <NoRecordsContent>
@@ -61,12 +71,11 @@
     private int totalItems;
     private MudTable<UserModelDB>? table;
     ShowMessagesComponent? showMessages;
-    private string? searchString = null;
 
     UserModelDB elementBeforeEdit = new();
     private List<string> editEvents = new();
 
-    UsersPaginationResponseModel rest = new();
+    IEnumerable<UserModelDB> Users = Enumerable.Empty<UserModelDB>();
 
     async Task Reload()
     {
@@ -76,7 +85,7 @@
 
     void SaveElement(MouseEventArgs element)
     {
-        UserModelDB? sender = rest.Users?.FirstOrDefault(x => x.Id == elementBeforeEdit.Id);
+        UserModelDB? sender = Users?.FirstOrDefault(x => x.TelegramId == elementBeforeEdit.TelegramId);
 
         if (sender is null)
         {
@@ -88,8 +97,9 @@
         {
             IsBusyProgress = true;
             StateHasChanged();
-            ResponseBaseModel upd_command = await _users.UpdateUser(sender.TelegramId, new UpdateUserModel()
+            ResponseBaseModel upd_command = await _users.UpdateUser(new UpdateUserModel()
                 {
+                    TelegramId = sender.TelegramId,
                     Email = sender.Email,
                     IsDisabled = sender.IsDisabled,
                     AllowAlerts = sender.AlarmSubscriber,
@@ -122,10 +132,14 @@
     private async Task<TableData<UserModelDB>> ServerReload(TableState state)
     {
         IsBusyProgress = true;
-        UsersPaginationResponseModel rest = await _users.UsersGetList(new UserListGetModel() { PageNum = state.Page, PageSize = state.PageSize });
+        StateHasChanged();
+        UsersPaginationResponseModel rest = await _users.UsersGetList(new UserListGetModel() { PageNum = state.Page, PageSize = state.PageSize, IncludeDisabledUsers = true });
+        showMessages?.ShowMessages(rest.Messages);
         totalItems = rest.TotalRowsCount;
         IsBusyProgress = false;
-
+        Users = rest.Users ?? Enumerable.Empty<UserModelDB>();
+        StateHasChanged();
+        
         return new TableData<UserModelDB>() { TotalItems = totalItems, Items = rest.Users };
     }
 
@@ -136,8 +150,13 @@
         sender.AlarmSubscriber = elementBeforeEdit.AlarmSubscriber;
         sender.CommandsAllowed = elementBeforeEdit.CommandsAllowed;
         sender.IsDisabled = elementBeforeEdit.IsDisabled;
+        sender.TelegramId = elementBeforeEdit.TelegramId;
+        sender.LastName = elementBeforeEdit.LastName;
+        sender.FirstName = elementBeforeEdit.FirstName;
+        sender.Name = elementBeforeEdit.Name;
+        sender.LastUpdate = elementBeforeEdit.LastUpdate;
 
-        AddEditionEvent($"RowEditCancel event: Editing of Element [{((SystemCommandModelDB)element).FileName} {((SystemCommandModelDB)element).Arguments}] canceled");
+        AddEditionEvent($"RowEditCancel event: Editing of Element [{sender.Name} {sender.FirstName}] canceled");
     }
 
     private void AddEditionEvent(string message)
