--- a/RazorLib/Shared/settings/EmailConfigComponent.razor
+++ b/RazorLib/Shared/settings/EmailConfigComponent.razor
@@ -16,16 +16,16 @@
                 <div class="row">
                     <div class="col">
                         <label for="exampleInputEmail" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+                        <input @bind="connect_config.Email" type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp validationServerUsernameFeedback" required>
                     </div>
                     <div class="col">
                         <label for="exampleInputLogin" class="form-label">Логин</label>
-                        <input type="text" class="form-control" id="exampleInputLogin" aria-describedby="loginHelp">
+                        <input @bind="connect_config.Login" type="text" class="form-control" id="exampleInputLogin" aria-describedby="loginHelp" required>
                     </div>
                     <div class="col">
                         <label for="exampleInputPassword" class="form-label">Пароль</label>
                         <div class="input-group">
-                            <input type="@(ShowPassword ? "text" : "password")" class="form-control" id="exampleInputPassword">
+                            <input @bind="connect_config.Password" type="@(ShowPassword ? "text" : "password")" class="form-control" id="exampleInputPassword" required>
                             <button @onclick="() => { ShowPassword = !ShowPassword; }" class="btn btn@(ShowPassword ? "" : "-outline")-secondary" type="button">@(ShowPassword ? "Скрыть" : "Показать")</button>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                         <div>
                             <label class="form-label"><span class="text-info">host:port</span></label>
                             <div class="input-group mb-3">
-                                <input disabled="@(TestConnectProcess || IsBusyProgress)" type="text" class="form-control border-info border-end-0" @bind-value="connect_config.HostSmtp" @bind-value:event="oninput" placeholder="SMTP Host" aria-label="SMTP Server host">
+                                <input disabled="@(TestConnectProcess || IsBusyProgress)" type="text" class="form-control border-info border-end-0" required @bind-value="connect_config.HostSmtp" @bind-value:event="oninput" placeholder="SMTP Host" aria-label="SMTP Server host">
                                 <span class="input-group-text px-1 border-info border-start-0 border-end-0">:</span>
                                 <input disabled="@(TestConnectProcess || IsBusyProgress)" type="number" class="form-control border-info border-start-0" @bind-value="connect_config.PortSmtp" @bind-value:event="oninput" style="max-width: 100px;" placeholder="Port" aria-label="Smtp Server port">
                             </div>
@@ -66,10 +66,13 @@
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <div class="btn-group me-md-2" role="group" aria-label="Basic outlined example">
-                    <button type="button" class="btn btn-outline-primary">Сохранить</button>
-                    <button type="button" class="btn btn-outline-primary">Отмена</button>
+                    <button disabled="@(!CanSave)" @onclick="SaveConfig" type="button" class="btn btn-outline-primary">Сохранить</button>
+                    @if (CanSave)
+                    {
+                        <button @onclick="() => connect_config = GlobalStatic.CreateDeepCopy(connect_config_orign)" type="button" class="btn btn-outline-primary">Отмена</button>
+                    }
                 </div>
-                <button class="btn btn-primary" type="button">Тест подключения</button>
+                <button disabled="@(!connect_config.IsConfigured)" @onclick="TectConfigConnect" class="btn btn-primary" type="button">Тест подключения</button>
             </div>
         </form>
     </div>
@@ -91,8 +94,15 @@
 
     async Task SaveConfig()
     {
+        if (!connect_config.IsConfigured)
+        {
+            _snackbar.Add("Настройки не заполнены!", Severity.Warning, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
+            return;
+        }
+
         IsBusyProgress = true;
         ResponseBaseModel rest = await _storage.SaveEmailConfig(connect_config);
+        _messages_ref?.ShowMessages(rest.Messages);
         if (rest.IsSuccess)
         {
             connect_config_orign = GlobalStatic.CreateDeepCopy(connect_config);
@@ -114,7 +124,20 @@
         IsBusyProgress = true;
         EmailConfigResponseModel res = await _storage.GetEmailConfig();
 
-        _messages_ref?.ShowMessages(res.Messages);
+        Severity _style;
+        foreach (ResultMessage m in res.Messages)
+        {
+            _style = m.TypeMessage switch
+            {
+                ResultTypeEnum.Success => Severity.Success,
+                ResultTypeEnum.Info => Severity.Info,
+                ResultTypeEnum.Warning => Severity.Warning,
+                ResultTypeEnum.Error => Severity.Error,
+                _ => Severity.Normal
+            };
+            _snackbar.Add(m.Text, _style, opt => opt.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
+        }
+
         if (!res.IsSuccess || res.Conf is null)
         {
             IsBusyProgress = false;
